--- a/src/assets/style/utils/utils.scss
+++ b/src/assets/style/utils/utils.scss
@@ -1,2 +1,2 @@
-@forward "../variables/variables.scss";
-@forward "../mixins/mixins.scss";
+@forward "../variables/variables";
+@forward "../mixins/mixins";
