--- a/src/assets/style/mixins/mixins.scss
+++ b/src/assets/style/mixins/mixins.scss
@@ -1,4 +1,5 @@
 @use "sass:math";
+@use "sass:map";
 @use "../variables/variables.scss" as *;
 
 $breakPoints: (
@@ -9,7 +10,7 @@ $breakPoints: (
  * 規定のブレークポイントより下のメディアクエリです
  */
 @mixin mediaQueryDown($breakPoint: mobile) {
-  @media screen and (max-width: #{(map-get($breakPoints,$breakPoint) - 1)}px) {
+  @media screen and (max-width: #{(map.get($breakPoints,$breakPoint) - 1)}px) {
     @content;
   }
 }
@@ -18,7 +19,7 @@ $breakPoints: (
  * 規定のブレークポイントより上のメディアクエリです
  */
 @mixin mediaQueryUp($breakPoint: mobile) {
-  @media screen and (min-width: #{map-get($breakPoints,$breakPoint)}px) {
+  @media screen and (min-width: #{map.get($breakPoints,$breakPoint)}px) {
     @content;
   }
 }
