ボタンフォーカスの調整

--- a/src/assets/style/color/semanticColors.scss
+++ b/src/assets/style/color/semanticColors.scss
@@ -56,12 +56,18 @@
   --color-button-secondary-light-hover: var(--color-blue-200);
   --color-button-secondary-dark-hover: var(--color-blue-200);
   --color-button-secondary-hover: var(--color-blue-200);
+  --color-button-tertiary-light-hover: var(--color-blue-50);
+  --color-button-tertiary-dark-hover: var(--color-blue-50);
+  --color-button-tertiary-hover: var(--color-blue-50);
   --color-button-light-active: var(--color-blue-1200);
   --color-button-dark-active: var(--color-blue-1200);
   --color-button-active: var(--color-blue-1200);
   --color-button-secondary-light-active: var(--color-blue-300);
   --color-button-secondary-dark-active: var(--color-blue-300);
   --color-button-secondary-active: var(--color-blue-300);
+  --color-button-tertiary-light-active: var(--color-blue-100);
+  --color-button-tertiary-dark-active: var(--color-blue-100);
+  --color-button-tertiary-active: var(--color-blue-100);
   --color-button-light-disabled: var(--color-grey-420);
   --color-button-dark-disabled: var(--color-grey-420);
   --color-button-disabled: var(--color-grey-420);
