--- a/src/assets/style/basic/basicStyle.scss
+++ b/src/assets/style/basic/basicStyle.scss
@@ -34,3 +34,27 @@ body {
   clip-path: polygon(0 0, 0 0, 0 0, 0 0);
   border: 0;
 }
+
+.sr-only-mobile {
+  @include mediaQueryDown {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    clip-path: polygon(0 0, 0 0, 0 0, 0 0);
+    border: 0;
+  }
+}
+
+.sr-only-desktop {
+  @include mediaQueryUp {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    clip-path: polygon(0 0, 0 0, 0 0, 0 0);
+    border: 0;
+  }
+}
