リソースリストのホバースタイル作成

--- a/src/assets/style/color/primitiveColors.scss
+++ b/src/assets/style/color/primitiveColors.scss
@@ -249,4 +249,18 @@
   --color-purple-1000: #41048e;
   --color-purple-1100: #30016c;
   --color-purple-1200: #21004b;
+
+  /* Neutral Opacity */
+  --color-neutral-opacity-50: rgba(0, 0, 0, 0.05);
+  --color-neutral-opacity-100: rgba(0, 0, 0, 0.1);
+  --color-neutral-opacity-200: rgba(0, 0, 0, 0.2);
+  --color-neutral-opacity-300: rgba(0, 0, 0, 0.3);
+  --color-neutral-opacity-400: rgba(0, 0, 0, 0.4);
+  --color-neutral-opacity-420: rgba(0, 0, 0, 0.42);
+  --color-neutral-opacity-500: rgba(0, 0, 0, 0.5);
+  --color-neutral-opacity-536: rgba(0, 0, 0, 0.536);
+  --color-neutral-opacity-600: rgba(0, 0, 0, 0.6);
+  --color-neutral-opacity-700: rgba(0, 0, 0, 0.7);
+  --color-neutral-opacity-800: rgba(0, 0, 0, 0.8);
+  --color-neutral-opacity-900: rgba(0, 0, 0, 0.9);
 }
