--- a/src/assets/style/color/semanticColors.scss
+++ b/src/assets/style/color/semanticColors.scss
@@ -166,7 +166,7 @@
 
   /* others */
   --color-mono-clear-light: var(--color-white);
-  --color-mono-clear-dark: var(--color-whitek);
+  --color-mono-clear-dark: var(--color-white);
   --color-mono-clear: var(--color-white);
   --color-mono-reverse-light: var(--color-black);
   --color-mono-reverse-dark: var(--color-black);
