--- a/src/assets/style/color/primitiveColors.scss
+++ b/src/assets/style/color/primitiveColors.scss
@@ -251,16 +251,16 @@
   --color-purple-1200: #21004b;
 
   /* Neutral Opacity */
-  --color-neutral-opacity-50: rgba(0, 0, 0, 0.05);
-  --color-neutral-opacity-100: rgba(0, 0, 0, 0.1);
-  --color-neutral-opacity-200: rgba(0, 0, 0, 0.2);
-  --color-neutral-opacity-300: rgba(0, 0, 0, 0.3);
-  --color-neutral-opacity-400: rgba(0, 0, 0, 0.4);
-  --color-neutral-opacity-420: rgba(0, 0, 0, 0.42);
-  --color-neutral-opacity-500: rgba(0, 0, 0, 0.5);
-  --color-neutral-opacity-536: rgba(0, 0, 0, 0.536);
-  --color-neutral-opacity-600: rgba(0, 0, 0, 0.6);
-  --color-neutral-opacity-700: rgba(0, 0, 0, 0.7);
-  --color-neutral-opacity-800: rgba(0, 0, 0, 0.8);
-  --color-neutral-opacity-900: rgba(0, 0, 0, 0.9);
+  --color-neutral-opacity-50: rgba(0, 0, 0, 5%);
+  --color-neutral-opacity-100: rgba(0, 0, 0, 10%);
+  --color-neutral-opacity-200: rgba(0, 0, 0, 20%);
+  --color-neutral-opacity-300: rgba(0, 0, 0, 30%);
+  --color-neutral-opacity-400: rgba(0, 0, 0, 40%);
+  --color-neutral-opacity-420: rgba(0, 0, 0, 42%);
+  --color-neutral-opacity-500: rgba(0, 0, 0, 50%);
+  --color-neutral-opacity-536: rgba(0, 0, 0, 53.6%);
+  --color-neutral-opacity-600: rgba(0, 0, 0, 60%);
+  --color-neutral-opacity-700: rgba(0, 0, 0, 70%);
+  --color-neutral-opacity-800: rgba(0, 0, 0, 80%);
+  --color-neutral-opacity-900: rgba(0, 0, 0, 90%);
 }
